Cp/ibm video (#3340)
Embedded video using new tag in all courses that were on main around
noon. Still need to do it for QChem and the two Qiskit in Classrooms
courses as soon as they are on main.

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/learning/courses/general-formulation-of-quantum-information/general-measurements/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/general-measurements/introduction.ipynb
@@ -25,14 +25,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on general measurements. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=Xi9YTYzQErY&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=13) for this lesson in a separate window.\n",
     "\n",
-    "  <ImageLink\n",
-    "    title=\"General measurements | Understanding Quantum Information & Computation | Lesson 11\"\n",
-    "    alt=\"Video thumbnail\"\n",
-    "    href=\"https://youtu.be/Xi9YTYzQErY?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/general-measurements/introduction/11-A.avif\"\n",
-    "  />"
+    "<IBMVideo id=\"134063423\" title=\"In this video, John Watrous discusses mathematical formulations of measurements. He discusses Naimark's theorem. Finally he describes quantum state discrimination and tomography. \"/>"
    ]
   }
  ],
