--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
@@ -24,14 +24,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on purification and fidelity. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=jemWEdnJTnI&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=14) for this lesson in a separate window.\n",
     "\n",
-    "  <ImageLink\n",
-    "    title=\"Purifications and Fidelity | Understanding Quantum Information & Computation | Lesson 12\"\n",
-    "    alt=\"Video thumbnail\"\n",
-    "    href=\"https://youtu.be/jemWEdnJTnI?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction/12-A.avif\"\n",
-    "  />"
+    "<IBMVideo id=\"134063424\" title=\"In this video, John Watrous discusses purification of a quantum state and a state's fidelity.\"/>"
    ]
   }
  ],
