--- a/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
+++ b/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
@@ -9,13 +9,9 @@
    "source": [
     "# Running quantum circuits\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Run Quantum Circuits with Qiskit Primitives\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtube.com/watch?v=NTplT4WnNbk\"\n",
-    "  src=\"/learning/images/courses/quantum-computing-in-practice/running-quantum-circuits/youtube-thumbnail.avif\"\n",
-    "/>\n",
+    "Watch the video on quantum circuits and primitives from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtube.com/watch?v=NTplT4WnNbk)\n",
     "\n",
+    "<IBMVideo id=\"134063416\" title=\"In this video, Olivia Lanes explains quantum circuits and primitives. She covers Qiskit Runtime primitives estimator and sampler.\"/>\n",
     "\n",
     "## Lesson overview\n",
     "\n",
