--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -9,14 +9,9 @@
     "\n",
     "# Utility-scale QAOA\n",
     "\n",
+    "Watch the video on utility-scale QAOA from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtube.com/watch?v=P3s7TIMIvZ0)\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Solving MaxCut with QAOA: Quantum Tutorial for 100+ Qubits\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtube.com/watch?v=P3s7TIMIvZ0\"\n",
-    "  src=\"/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/youtube-thumbnail.avif\"\n",
-    "/>\n",
-    "\n",
+    "<IBMVideo id=\"134063421\" title=\"In this video, Olivia Lanes walks through a utility scale calculation on a quantum computer. The calculation involves the Max-Cut problem and uses the approach of QAOA.\"/>\n",
     "\n",
     "## Lesson overview:\n",
     "\n",
