--- a/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
@@ -7,14 +7,10 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
-    "<ImageLink\n",
-    "  title=\"Quantum Circuits | Understanding Quantum Information & Computation | Lesson 03\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/30U2DTfIrOU\"\n",
-    "  src=\"/learning/images/courses/basics-of-quantum-information/quantum-circuits/introduction/03-A.avif\"\n",
-    "/>\n",
     "\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum circuits. Alternatively, you can open the [YouTube video](https://youtu.be/30U2DTfIrOU?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "\n",
+    "<IBMVideo id=\"134056224\" title=\"In this video, John Watrous describes introduces quantum circuits. He demonstrates how circuits represent quantum operations and builds the connection with matrix operations.\"/>\n",
     "\n",
     "This lesson introduces the *quantum circuit* model of computation, which provides a standard way to describe quantum computations.\n",
     "\n",
