--- a/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb
@@ -26,14 +26,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on correcting quantum errors. Alternatively, you can open the [YouTube video](https://youtu.be/OoQSdcKAIZc?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Correcting Quantum Errors | Understanding Quantum Information & Computation | Lesson 13\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/OoQSdcKAIZc?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction/13-A.avif\"\n",
-    "/>"
+    "<IBMVideo id=\"134082557\" title=\"In this video, John Watrous starts by discussing classical repetition codes and then extends some of the ideas to quantum repetition codes. Approaches are combined to yield the 9-qubit Shor code.\"/>"
    ]
   }
  ],
