--- a/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction.ipynb
@@ -24,12 +24,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Quantum Error Correction | Understanding Quantum Information & Computation | Lesson 15\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/9TCIOm8gcVQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction/15-A.avif\"\n",
-    "/>"
+    "In the following video, John Watrous steps you through the content in this lesson on quantum code constructions. Alternatively, you can open the [YouTube video](https://youtu.be/9TCIOm8gcVQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "\n",
+    "<IBMVideo id=\"134313287\" title=\"In this video, John Watrous discusses CSS codes, Toric codes, and other code families relevant to error correction.\"/>"
    ]
   }
  ],
