--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -23,14 +23,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum query algorithms. Alternatively, you can open the [YouTube video](https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "  <ImageLink\n",
-    "    title=\"Quantum Query Algorithms | Understanding Quantum Information & Computation | Lesson 05\"\n",
-    "    alt=\"Video thumbnail\"\n",
-    "    href=\"https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction/05-A.avif\"\n",
-    "  />"
+    "<IBMVideo id=\"134056235\" title=\"In this video, John Watrous discusses the query model of computation and steps through some canonical examples from quantum computing. These include the Deutsch-Jozsa algorithm and Simon's algorithm.\"/>"
    ]
   }
  ],
