Sophy/Qiskit-in-the-Classroom Course - Module: computer science (#3304)
Co-authored-by: Soyoung Shin <63990199+0sophy1@users.noreply.github.com>

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd22598e-b231-40d3-a816-cbd52b1f1309",
+   "id": "503c9fb9-2720-49e4-a32f-f3f98973d312",
    "metadata": {},
    "source": [
     "{/* cspell:ignore Gott würfelt nicht outcoming Rihanna Rihanna's Marshman */}\n",
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f32da4b-8765-40b7-9df3-3c00c410e607",
+   "id": "3571392e-5f59-4013-9807-b668da03189b",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` v1.3 or newer\n",
+    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
+    "- `qiskit-aer` v15.0 or newer\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
@@ -27,7 +27,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c9ec60-3541-4caf-bd6c-c8ae4072322e",
+   "id": "0e714b7e-ec73-41a1-a4c3-7165b5eb1eb9",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "\n",
+    "\n",
+    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
+    "\n",
+    "\n",
+    "Video title=\"Bell’s Inequality and the Power of Quantum Entanglement\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12e8ce0d-a1dc-4bc4-b81b-b08df2c68468",
    "metadata": {},
    "source": [
     "## The problem\n",
@@ -43,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c093caad-e79f-44e1-9ea9-4ce2559123e4",
+   "id": "bea5497b-5b82-49ee-8164-b96e4fbf1e2e",
    "metadata": {},
    "source": [
     "## Setup of the thought experiment: entanglement of spin\n",
@@ -67,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "661ce70d-e65f-4fbb-b8fa-8dfcc97f1759",
+   "id": "f490c508-3868-4c3e-9f88-79f16b1bf95c",
    "metadata": {},
    "source": [
     "## Our options\n",
@@ -118,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be883ea2-9ade-4b5d-bcbd-ba09d9a80b4c",
+   "id": "d0f267c4-1205-46ef-9f86-b1b46bf45f5a",
    "metadata": {},
    "source": [
     "## What does Einstein's option (hidden variables) predict?\n",
@@ -184,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5073347c-b577-4ca1-9c35-7d8e1046d14e",
+   "id": "592094d1-a5e3-4711-9cc9-c97a62bed56b",
    "metadata": {},
    "source": [
     "### Generalization\n",
@@ -202,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a04ec85-f57a-4855-b99d-8d55947cde98",
+   "id": "7286b152-cf3e-4777-bd5e-e862fa6f57b2",
    "metadata": {},
    "source": [
     "## What does Born's option (non-deterministic quantum mechanics) predict?\n",
@@ -285,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6a47a5-9b7b-4cc1-b25a-9a4064dc8a86",
+   "id": "90e79abd-7380-49a7-aae1-bb373a6b2ce1",
    "metadata": {},
    "source": [
     "## Wow\n",
@@ -303,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7fc3cd-61d4-4447-8c12-0ae77d21dc48",
+   "id": "2c426bb7-1203-4bd0-b708-fd7635ec1266",
    "metadata": {},
    "source": [
     "## Test using real quantum computers!\n",
@@ -323,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "557a5320-cb55-48dd-8721-30a7bde5ed32",
+   "id": "7339b9d8-2508-4821-8823-264b8c7afdad",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd9e765-d641-4f87-8bd8-eabe388c9209",
+   "id": "332fa037-d989-48cc-ab84-ddd42fd803f9",
    "metadata": {},
    "source": [
     "$H$ Hadamard gate: Creates a superposition state. Single-qubit gate.\n",
@@ -361,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b6dca98f-ffec-47f4-ab76-90463a5b5e84",
+   "id": "b9da36f3-3ccc-4af0-ae16-a1ce8741211a",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8888558d-0327-4b0e-80f4-eb8653fdc77a",
+   "id": "67abf315-c69b-4e09-92f5-09ae8b183565",
    "metadata": {},
    "source": [
     "CNOT Controlled-NOT gate: This gate uses two qubits: a control and a target. Checks the state of a control qubit which is not changed. But if the control qubit is in the state $|1\\rangle$, the gate changes the state of the target qubit; if the state of the control qubit is $|0\\rangle$ no change is made at all. In the notation below, assume the first qubit is the control, and the second is the target.\n",
@@ -395,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5d3521f0-c03b-4252-87d1-bbddac680ef6",
+   "id": "7242ff98-867d-4e61-ab66-81920bb132ec",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ac65fd3-c901-4017-966d-d1ce337f12cb",
+   "id": "615a34b2-2ebd-4f04-afad-f91a05eb542f",
    "metadata": {},
    "source": [
     "Note that the first qubit listed in `qc.cx(0,1)` is the control, and the second is the target. Diagrammatically, the target is the one with the \"+\" sign or cross on it.\n",
@@ -432,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "134a6eb8-7450-45de-86c7-771558924658",
+   "id": "f4eddadc-834e-48e8-b190-dfc7727c2b79",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30397874-2f38-4cbf-b52c-8dcd77e81ed6",
+   "id": "b89f704d-5081-4b9d-bad6-f5ee1b330955",
    "metadata": {},
    "source": [
     "The name of the gate `ry` specifies the axis about which the rotation occurs. The first argument $\\pi/2$ refers to the amount of the rotation, and the second argument specifies the qubit on which the gate is to be placed.\n",
@@ -491,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa19e79-a72c-4cb8-9d09-68882a11b402",
+   "id": "49ce89c2-0f85-4562-8af5-502547764214",
    "metadata": {},
    "source": [
     "## From physical experiment to quantum circuits\n",
@@ -535,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2e5175-cf0d-49b3-858a-009cc892a794",
+   "id": "39cabc59-eb79-4b18-afae-9493c0d67fa7",
    "metadata": {},
    "source": [
     "### Step 1: Mapping our results to a quantum circuit"
@@ -544,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6fbd769d-bc47-4857-9ca7-884f1b2bbd3b",
+   "id": "63858607-086b-408e-958a-699bf705c5ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e017cb53-45da-48e7-b5c6-f225978fad72",
+   "id": "368ee248-fd45-4f2d-a208-9c72401aa13b",
    "metadata": {},
    "source": [
     "Remember that 1/3 of the time Rihanna's axis of choice will be $2\\pi/3$ radians from Lucas's, 1/3 of the time it will be $4 \\pi/3$ radians from Lucas's, and 1/3 of the time, they will choose the same axis. So we actually need to make 3 quantum circuits for these 3 cases, and add up the results. We'll carefully explain the first one, and the last two we will simply state."
@@ -564,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0ccef389-e7f0-406b-801f-d5558cee8d8f",
+   "id": "4c336847-df4f-47f2-9151-0111eec72d39",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d476150a-8d33-49a7-8d33-e9049fcc223b",
+   "id": "4dfdd629-151d-480b-9c1d-71ff5a2ba9d0",
    "metadata": {},
    "source": [
     "The code below quickly constructs all three circuits in a more streamlined way. Note that the only difference between the three circuits is how far we rotate the two qubits about the $y$ axis."
@@ -612,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dc58dcdf-6e27-4ba0-bb5d-aaa7189d94e8",
+   "id": "c9eb5ea9-c781-4ac4-9780-6e1fd45a01e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c5c98277-f4cc-4aa8-b566-2750cba1cd0b",
+   "id": "717c041d-794a-4ef7-820c-5aee5191154e",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "170b95b6-b6d0-45c3-9c6b-bfda2559e27f",
+   "id": "3e9f665f-2a3d-44fd-9a90-ead374c9b0e6",
    "metadata": {},
    "source": [
     "Now we will use a Qiskit primitive called the StatevectorSampler. A sampler is a primitive designed to sample all the possible states of a system and return probabilities (or in some cases, quasiprobabilities) of obtaining each state. We can specify a number of \"shots\", and look at the \"counts\" for each state."
@@ -666,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1deb01de-15db-4525-ab6b-d1d4fa6ddfa8",
+   "id": "dc29d491-7f28-4bd8-b877-913a10b02866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6fd2d1-4a25-4161-8f4d-ba46658a46fc",
+   "id": "a2eb9a3e-07f2-46f7-9cd5-a5d13ec99853",
    "metadata": {},
    "source": [
     "If we look at the counts from each circuit, we see that two of them were basically identical, and the third was quite different."
@@ -697,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3fdac120-3936-4d42-9a08-4b7633c369b0",
+   "id": "6deb8aed-c959-4279-b338-7bdbb03ccdb2",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141a251c-41fc-4efe-91ef-e058d0ed0da4",
+   "id": "6b16a685-f5cf-4bf5-a8b6-13ec80562850",
    "metadata": {},
    "source": [
     "Let us make a list of the possible outcomes and add up all the counts of each state from each of the three circuits to obtain overall probabilities."
@@ -726,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6df9fff3-8ec2-4c2c-9ea3-792c13e992e0",
+   "id": "59ba69f8-477a-4429-b831-9a8e088160f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7650377d-fbf4-4b96-b31d-3ae249e5e687",
+   "id": "3b0006c6-f428-4f66-aee9-1ba882f2b1ae",
    "metadata": {},
    "source": [
     "Now we can print out the total counts for each outcome, and plot the histogram."
@@ -759,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f95d3d32-9b1c-492b-ae04-9e49943738fa",
+   "id": "ab7cea36-1482-4f2e-94a3-b22519ece4af",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e4ce97-fc91-404b-9191-b9c3e5948de7",
+   "id": "ddef74cd-4d7b-4025-bf00-a3940b5bb6b2",
    "metadata": {},
    "source": [
     "### Check-in question\n",
@@ -815,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "227cae3a-d29c-49a8-b21a-d6840ca27a0a",
+   "id": "11b5e8fe-0de2-4f36-a3e9-f6f2f24546df",
    "metadata": {},
    "source": [
     "### Step 2: Optimize your quantum circuit for running on real hardware\n",
@@ -826,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5242b6-1388-4567-a390-2523fe6faf90",
+   "id": "97232ee2-a79e-4cb8-9c1e-cdc2b121827c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6719ab2d-533f-4039-bc59-d82c3f63ccf0",
+   "id": "c490a6b7-2f21-40b1-9cee-81da7adfec7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "56cd26ec-2330-48e6-8930-1ce11aeb0b1c",
+   "id": "5308a428-dedb-40f4-ab46-95f58d913623",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d0417f2-b76d-408c-888e-c4c5f60ca7c6",
+   "id": "8e3b685c-eb8b-4ae9-8f4b-cf8a4a26d956",
    "metadata": {},
    "source": [
     "### Step 3: Execute your job on IBM quantum computers using Runtime primitives\n",
@@ -897,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1a6cdb-37e9-4756-b128-df4c8e23618b",
+   "id": "cb7dbe36-7c08-40dc-be66-d4aed3fc00f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d4e3b6ec-7d2d-40be-885f-785ffede4653",
+   "id": "c7ee41f3-b642-4694-873f-bea0c47bacce",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "dfba6a4f-f252-42a8-b331-053c515dd0fc",
+   "id": "668b0b2a-5f36-4d8e-a36f-5b3622312ae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "549ef076-bbbe-415d-8dc1-86f5b868c5e9",
+   "id": "6644b77a-e3bc-47ba-b323-947d5b8ee0c3",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4938e7a7-73a5-49e0-9efc-e9d10d8771e5",
+   "id": "69e7a1af-01aa-468f-ba72-d88de4293239",
    "metadata": {},
    "source": [
     "### Step 4: Post-process and analysis\n",
@@ -1080,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24eaf563-cc5b-46b0-820a-93211a39c1c5",
+   "id": "b315516c-53c2-4830-8130-eb535d466a67",
    "metadata": {},
    "source": [
     "### Critical concepts:\n",
@@ -1184,8 +1198,15 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Bell's inequality with Qiskit"
+  "title": "Bell's inequality with Qiskit",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
