--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36406e39-c0fd-4a0b-9cad-bb25dcb9dfa7",
+   "id": "96a1e70b-4153-4904-a32f-2dd0296b3015",
    "metadata": {},
    "source": [
     "{/* cspell:ignore nabla uparrow downarrow */}\n",
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62ae6e1-7d47-4437-b350-232635b36b58",
+   "id": "6f2c423a-7808-40ec-b4fe-c11ff688cf58",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` v1.3 or newer\n",
+    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
+    "- `qiskit-aer` v15.0 or newer\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
@@ -27,7 +27,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c12614f-5e0b-4110-acc0-f258ddba353b",
+   "id": "cd4e7122-f25e-45e4-b461-43fdfc98391a",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "\n",
+    "\n",
+    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
+    "\n",
+    "\n",
+    "Video title=\"Quantum Spin Isn’t What You Think - See Why with Stern-Gerlach\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44513754-2735-4541-b186-9a2c222d190b",
    "metadata": {},
    "source": [
     "## The experiment\n",
@@ -141,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7fa03af-f0d0-4af0-852e-a1e53ca19b44",
+   "id": "de9d27c2-71ed-4b22-958c-3a116aa016f2",
    "metadata": {},
    "source": [
     "## How will qubits help us test this?\n",
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c872c202-2be0-4eaa-9288-f8a6ac5dafa2",
+   "id": "7839cddd-5618-440e-8750-1c61f96be584",
    "metadata": {},
    "source": [
     "## First experiment: A single measurement\n",
@@ -182,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e9641118-1c0a-44e0-a364-3ac677b68b53",
+   "id": "9e7aa03f-baab-4220-8ba1-1cf18a70bd88",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6959cc-0c6c-419b-8608-a15e543afb84",
+   "id": "e38e85d9-21b2-44f4-a5ab-85a65d038eb8",
    "metadata": {},
    "source": [
     "Now we will use the angles above as parameters in a quantum circuit. We are considering only one particle at a time, so we will use only one qubit in our circuit, and we will require only one classical register."
@@ -226,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8574d5f4-0e08-4a15-b75e-adb87c8b4bbb",
+   "id": "7bcdc19e-1915-4443-98c9-54e6fbec7b62",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4339a9-b505-4acd-abb1-2cb0007d05e3",
+   "id": "f0899d43-94c7-43d4-be43-e05ad0604db4",
    "metadata": {},
    "source": [
     "### Step 2: Optimize problem for quantum execution\n",
@@ -267,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "261acf3b-2a20-4b93-97fd-c2551ab57b46",
+   "id": "2a9aff4b-4f38-4fc3-83e4-02ff7b0b2842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0ef85527-b8ad-43e8-8829-97ddfbe099a9",
+   "id": "646d2ac4-b45d-4de9-a40c-eb00fc2d4228",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c5ef88-a223-45d4-9916-aafc65332ee0",
+   "id": "49ae8ccf-31fe-4cfa-9adb-bd37dd0a6be3",
    "metadata": {},
    "source": [
     "We now must transpiled the circuit, meaning we must map our circuit onto the base gates available to our chosen quantum computer, and we want to optimize our circuit for running on that quantum computer."
@@ -318,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "db23de08-c34a-4303-b905-14a3de8485a9",
+   "id": "6addc621-f962-4e43-ad13-8725d3b8bab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7cdeb6-f3b8-424d-8661-606a4d10d9b9",
+   "id": "1be7479f-b347-4b66-a041-686a26f83012",
    "metadata": {},
    "source": [
     "### Step 3: Execute using Qiskit Runtime Primitives\n",
@@ -342,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4cd3173-f1e0-424e-874b-3d106c057662",
+   "id": "1b27ce25-d4ce-4f50-95d2-9eed09935390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebebebe3-2602-4ba4-88b1-ebc3a026523a",
+   "id": "5e13749c-cff1-48d4-9862-86e2103d154b",
    "metadata": {},
    "source": [
     "Use the code below if you are unable to run the experiment on a real quantum computer."
@@ -368,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8182062-3e3a-46be-a686-5d9ab639429c",
+   "id": "9b9219e1-9a6b-4983-a318-28a469a7895c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981a55d9-3b7a-4a7d-b6b3-c5941c436400",
+   "id": "37825304-dd92-4dd4-9277-b74cf9da8595",
    "metadata": {},
    "source": [
     "### Step 4: Post-processing and classical analysis\n",
@@ -404,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d96c952c-c669-48ef-acf7-e237c4d2d6ac",
+   "id": "db66028b-9c70-4ecc-94f7-d8fdf2b00741",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc725e3e-d3f0-419e-bfdf-604c31d10ea3",
+   "id": "0a60da4d-937d-4dcb-bd16-3d22112c2c54",
    "metadata": {},
    "source": [
     "We made one measurement and obtained \"0\". This is no surprise for us. We know we are using a quantum computer composed of qubits and we're very accustomed to classical bits returning a 0 or a 1. But keep in mind: this is the quantum computing analog of the experiments done with particles with magnetic moments. If we had expected an even spread between 0 and +1, it might indeed have surprised us that we obtained one extremum on our first measurement. It is this surprising quantization of results in the Stern-Gerlach experiment that led us to a better understanding of nature, and that in turn helped us eventually build quantum computers.\n",
@@ -444,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ccadf6-f1b1-41f9-a963-a2cb0d3b6940",
+   "id": "d1f43d00-15bf-48f6-99f4-8ead1a1edef6",
    "metadata": {},
    "source": [
     "# Second experiment: Measuring many particles"
@@ -452,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53508e9-9977-4567-9d82-411490fe2c88",
+   "id": "f6d4f8c6-51e9-4d50-99d6-4c331eed159b",
    "metadata": {},
    "source": [
     "To gather statistics on many such measurements, we don't need to repeat steps 1 & 2. We can simply increase the number of shots in our experiment. Feel free to play with the number of shots in the instance of step 3 below."
@@ -461,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46bc8bf0-892f-495c-b214-63da8d033268",
+   "id": "464e2f9d-ff48-4308-bd90-bfce4e327fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec5e9836-d44e-4004-9991-3f6af0cc9d8d",
+   "id": "42a799f6-6dd0-4fa0-9935-506be57b619f",
    "metadata": {},
    "source": [
     "As before, if you are unable to run on a real quantum computer, uncomment the block above from the first experiment, and simply change ```num_shots = 1``` to ```num_shots = 100``` or more."
@@ -488,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c5657e06-dc9b-4bf6-992a-85445c907f03",
+   "id": "5f7b68dc-0aca-48f6-9dc5-f7426afc1f3f",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52925a39-75f8-482d-899d-f7629540877a",
+   "id": "b3948bbf-1c43-42a3-8698-22c123730525",
    "metadata": {},
    "source": [
     "We see that we sometimes measure 0 and sometimes measure 1. Note that we never measure anything else! You could change the number of shots, and notice that the probability of measuring 0 or 1 seems to be fairly consistent between different runs with different numbers of shots. So, something about the preparation of the state seems to be determining the probability of measurement outcomes, although any one measurement could yield either 0 or 1."
@@ -516,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9823515-210a-4d00-b990-43c361f0c727",
+   "id": "bea93230-a5a4-45d7-a7e7-0de6d4dc24f7",
    "metadata": {},
    "source": [
     "## Third experiment: Random spins in an oven\n",
@@ -531,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b286f4f5-8cc0-4cae-9c89-45ab334428a2",
+   "id": "3c13493f-a72b-48dc-981d-5e0ace514456",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c854c016-34ee-45ed-9636-518f339180af",
+   "id": "9eac064f-d04c-4956-8d68-f54fcc19ef22",
    "metadata": {},
    "source": [
     "Running a quantum circuit for only a single shot and doing so for many random configurations is an unusual workflow for a quantum computer. It can certainly be done, but for simplicity, we will use a local simulator here."
@@ -575,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f17100-35a3-4a04-b236-7e8a9b447664",
+   "id": "93ca1659-8195-4e07-b2c8-9a824253f90e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b1fcf4fc-2c55-43e5-84f7-f08d591b55fb",
+   "id": "c957fcf1-7c28-4062-85a0-a2cbe5f4ec2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e105c253-2be9-41f0-8335-225f8b4aba46",
+   "id": "aca084e7-fa82-489a-bdcf-8640f9b0e481",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6f1f6c-d03b-4650-908f-99ed75f04d32",
+   "id": "edf8b10a-82d7-43c9-9328-22fd4be9aa08",
    "metadata": {},
    "source": [
     "So we see that the random initial state of the qubits (corresponding to random orientations of the angular momentum in a Stern-Gerlach experiment) yield similar numbers of 0 and 1 states (like similar numbers of spin up and spin down states). This is exactly what the original Stern-Gerlach experiment showed."
@@ -662,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a19872c6-ad95-448f-bcc8-c6da4f8468e2",
+   "id": "18cd4c30-088a-4d0f-9803-ea7505d8f9dc",
    "metadata": {},
    "source": [
     "## Fourth experiment: Repeated measurements\n",
@@ -673,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "43ffc9e9-e821-41ed-b531-2ec1d7220813",
+   "id": "01d56697-cd24-429a-9d51-1d91c84c596e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6dd0c1d5-d6f5-42e6-9981-d9f390effdfd",
+   "id": "17b75fe2-f036-4494-9cd8-2bcd2dcf23bd",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5b364217-5df3-4ad9-ba1e-66ef76d52207",
+   "id": "92482e7f-e051-439d-81f8-f4312fa90bf4",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "def9bc02-11de-494a-a865-8d24929d4e58",
+   "id": "1de6d6c0-47a3-431d-8c88-3ac959a62b2e",
    "metadata": {},
    "source": [
     "In the figure above, the bins are labelled \"00\", \"01\" and so on. Here, these numbers refer to \"2nd outcome, 1st outcome\". So \"00\" means both measurements yielded the $|0\\rangle$ state, and \"01\" means the first measurement yielded $|1\\rangle$, and the second yielded $|0\\rangle$. The vast majority of qubits were either measured to be in $|0\\rangle$ twice, or measured to be $|1\\rangle$ twice. It was very rare for qubits to be measured in one state and then measured to be in another state, and the few cases in which that happened (~1%) are due to noise. In this case that noise has been simulated in keeping with the behavior of the real quantum system. This observed correlation between successive measurements is also observed in Stern-Gerlach-type measurements of particles with spin angular momentum. If a particle is measured to be \"spin-up\", a subsequent measurement shortly after that will once again yield \"spin-up\" (up to some small variation due to noise).\n",
@@ -757,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a0e7363-2492-4f67-9bd1-65241fc07c0c",
+   "id": "91822a41-ebcc-4014-b629-216d3795afd8",
    "metadata": {},
    "source": [
     "## Analysis of experiments thus far\n",
@@ -847,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd3a764-aeab-403d-b388-98c608f55743",
+   "id": "519a22e9-9b7a-4c4b-9e35-071c58f83b97",
    "metadata": {},
    "source": [
     "This is the well-known spin-z operator found in all quantum mechanics textbooks. One often sees this with the $\\hbar/2$ removed, in which case it is the \"Pauli-z\" operator, typically denoted $\\sigma_z$:\n",
@@ -929,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c871b05-f0bc-423a-b200-ef99bf278eb5",
+   "id": "5a46d1a4-e2a6-41b6-902e-be6c8f103236",
    "metadata": {},
    "source": [
     "## Fifth experiment: Measuring different observables\n",
@@ -967,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a582ba58-1621-4828-8ebb-3a8d63199e9e",
+   "id": "fa1ebdb9-ea6b-4f38-bb8e-489ea989fc6b",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1010,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ee1e18-3c4c-468a-a21e-fd19e034192b",
+   "id": "fb6a1529-d243-4a39-b7c9-99dc79245a11",
    "metadata": {},
    "source": [
     "This circuit rotates our system so that measurements (along $z$) tell us about the $x$ characteristics prior to the rotation. We already know that the quantum computer initializes states to $|0\\rangle$ which corresponds to $|\\uparrow\\rangle$. Let's see what happens when we measure the projection of spin along $x$ for a state initially in $|\\uparrow\\rangle$."
@@ -1005,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f36273f4-7a2c-4abe-8252-287abcb5634d",
+   "id": "82b58bae-3396-4637-8d36-87bd85cf306e",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8943360c-dcb8-4b1c-bc39-00ddc77dd5e5",
+   "id": "3c368db5-e4af-45b1-85f7-e216b57727ca",
    "metadata": {},
    "source": [
     "This shows us that for a qubit initially in $|0\\rangle$ (or equivalently, a spin in the $|\\uparrow\\rangle$) the probability of measuring a projection along $+x$ or $-x$ is about 50-50. In some ways, this makes perfect sense. After all, if something were pointing along the z direction, it would have no particular preference for $\\pm x$. We might expect the same to be true, if we start with the state $|1\\rangle$ (or $|\\downarrow\\rangle$). Let's check:"
@@ -1036,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a3ce36c2-5680-4548-a923-3ef5b2fcf942",
+   "id": "eb4f66b7-4f8a-4dd1-bf60-dcf7f9453807",
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "574a6752-9294-4655-abaf-b0c6ce9368fe",
+   "id": "bdbb25e4-de21-4a80-816a-c9b33ac21cd9",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c46b91-b4cc-43c3-a4dd-f86c2a1effc4",
+   "id": "2e6a2cef-abb9-4e65-a9bc-e2f987bb25fb",
    "metadata": {},
    "source": [
     "Yes! Again, we find a 50-50 probability of measuring a projections along $\\pm x$. In analogy with measurements along $z$, we might further suspect that a particle that collapses into a state definitely along $+x$ might have zero probability of subsequently being measured along $-x$. Let's check:"
@@ -1098,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d73e638d-1fcc-48af-ae03-61f1e60da6d0",
+   "id": "41dbe93a-81c1-457b-887e-41253b6ac51b",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "18cb2742-38f8-4370-84dc-86aa033a7ad2",
+   "id": "9561833d-4756-4e83-a226-352382c6b31b",
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea6b75aa-d382-4eed-8739-a4990ad02439",
+   "id": "4285a886-836d-4ef2-b4e0-5444b5409275",
    "metadata": {},
    "source": [
     "As expected, we obtain results in which the projection is along $+x$, and then later is again along $+x$, and we have results in which the projection is initially along $-x$ and is later along $-x$ once again. We do not see cases where the projection switches from $+x$ to $-x$ or vice-versa. We can collect our observations and use them to develop further operators in matrix forms, and further state vectors.\n",
@@ -1185,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d64357-c85d-4328-9e73-3d353c6b2602",
+   "id": "fead64bb-4dc4-499d-a39e-fe4f38819b2b",
    "metadata": {},
    "source": [
     "## Questions\n",
@@ -1263,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1073541-90dd-49f3-b000-2b3eda9d3ddc",
+   "id": "fbf48a0c-beaa-4ebe-a88c-213b940cf079",
    "metadata": {},
    "source": [
     "## Acknowledgements\n",
@@ -1291,7 +1305,14 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Stern-Gerlach measurements with Qiskit"
+  "title": "Stern-Gerlach measurements with Qiskit",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
