--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -15,14 +15,28 @@
    "id": "bc3346f6",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` v1.3 or newer\n",
+    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
+    "- `qiskit-aer` v15.0 or newer\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fba0059c-4008-4076-95f2-18dab949ca9e",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "\n",
+    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Video title=\"Superposition: The Quantum Principle That Changes Everything\""
    ]
   },
   {
@@ -1143,7 +1157,14 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Superposition with Qiskit"
+  "title": "Superposition with Qiskit",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
