updated all overview pages with hero cards

--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -5,6 +5,8 @@ description: Learn about quantum states, projective measurements, and unitary op
 
 # Overview
 
+!["Hero image"](/learning/images/courses/basics-of-quantum-information/hero.svg)
+
 Welcome to *Basics of Quantum Information,* the first course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
 - Basics of quantum information (this course)
