--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -5,6 +5,8 @@ description: Learn how quantum computers can efficiently solve problems, includi
 
 # Overview
 
+!["Hero image"](/learning/images/courses/fundamentals-of-quantum-algorithms/hero.svg)
+
 Welcome to *Fundamentals of Quantum Algorithms,* the second course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
 - [Basics of quantum information](/learning/courses/basics-of-quantum-information/index)
