--- a/learning/courses/general-formulation-of-quantum-information/index.mdx
+++ b/learning/courses/general-formulation-of-quantum-information/index.mdx
@@ -5,6 +5,8 @@ description: Learn about the mathematics of quantum information, including densi
 
 # Overview
 
+!["Hero image"](/learning/images/courses/general-formulation-of-quantum-information/hero.svg)
+
 Welcome to *General Formulation of Quantum Information,* the third course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
 - [Basics of quantum information](/learning/courses/basics-of-quantum-information/index)
