--- a/learning/courses/quantum-diagonalization-algorithms/index.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/index.mdx
@@ -5,6 +5,8 @@ description: This course covers several approaches to matrix diagonalization usi
 
 # Overview
 
+!["Hero image"](/learning/images/courses/quantum-diagonalization-algorithms/hero.svg)
+
 This course provides an overview of several approaches to quantum diagonalization. Some background is provided on the classical methods that are used, or that motivated the quantum algorithms. The content then steps through the implementation of the quantum algorithms on real quantum computers. There is substantial discussion of what factors determine the scaling of approaches using classical and quantum algorithms.
 
 ## Recommended background
