--- a/learning/courses/quantum-machine-learning/index.mdx
+++ b/learning/courses/quantum-machine-learning/index.mdx
@@ -5,4 +5,6 @@ description: An introduction to quantum machine learning (QML), data encoding, k
 
 # Overview
 
+!["Hero image"](/learning/images/courses/quantum-machine-learning/hero.svg)
+
 This course explores how quantum computing can play an exciting role in machine learning. The course will offer some review of classical machine learning approaches, but will also assume some familiarity with these methods. The primary focus will be how quantum computing can fit into existing machine learning workflows. Topics include data encoding, quantum kernels, and variational quantum circuits.
