--- a/learning/courses/foundations-of-quantum-error-correction/index.mdx
+++ b/learning/courses/foundations-of-quantum-error-correction/index.mdx
@@ -5,6 +5,8 @@ description: Learn about quantum error correction, quantum error correcting code
 
 # Overview
 
+!["Hero image"](/learning/images/courses/foundations-of-quantum-error-correction/hero.svg)
+
 Welcome to *Foundations of Quantum Error Correction,* the fourth course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
 - [Basics of quantum information](/learning/courses/basics-of-quantum-information/index)
