--- a/learning/courses/quantum-chem-with-vqe/index.mdx
+++ b/learning/courses/quantum-chem-with-vqe/index.mdx
@@ -5,6 +5,8 @@ description: An introductory course on quantum chemistry using the variational q
 
 # Overview
 
+!["Hero image"](/learning/images/courses/quantum-chem-with-vqe/hero.svg)
+
 This course covers building and mapping a chemical Hamiltonian for evaluation on a quantum computer. This introductory treatment focuses on the variational quantum eigensolver (VQE). Complete the course to earn your IBM Quantum Chemistry with VQE badge.
 
 ## Exam
