--- a/learning/courses/variational-algorithm-design/index.mdx
+++ b/learning/courses/variational-algorithm-design/index.mdx
@@ -5,4 +5,6 @@ description: An exploration of variational quantum algorithm design covers appli
 
 # Overview
 
+!["Hero image"](/learning/images/courses/variational-algorithm-design/hero.svg)
+
 This course is intended for individuals who have some experience with quantum computing and want to learn how to write variational algorithms using Qiskit Runtime primitives. It is also suitable for quantum computing professionals who want to expand their knowledge and skills in the field of variational algorithms.
