--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -35,8 +35,12 @@
     "\n",
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "\n",
-    "Video title=\"Bell’s Inequality and the Power of Quantum Entanglement\""
+    "<ImageLink\n",
+    "  title=\"Bell’s Inequality and the Power of Quantum Entanglement\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://youtu.be/pS69lqCMdy8?si=VmStqSGOtTiVtDjU\"\n",
+    "  src=\"/learning/images/modules/quantum-mechanics/bells-inequality-with-qiskit/YT-thumb.avif\"\n",
+    "/>"
    ]
   },
   {
