--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -34,9 +34,12 @@
     "\n",
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "\n",
-    "\n",
-    "Video title=\"Superposition: The Quantum Principle That Changes Everything\""
+    "<ImageLink\n",
+    "  title=\"Superposition: The Quantum Principle That Changes Everything\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://youtu.be/TZ-sUHK8vVQ?si=I62lwFycA3ctyo3O\"\n",
+    "  src=\"/learning/images/modules/quantum-mechanics/superposition-with-qiskit/YT-thumb.avif\"\n",
+    "/>"
    ]
   },
   {
