Update announcements links

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "<Admonition type=\"caution\" title=\"Deprecations to accelerate the new version of dynamic circuits\">\n",
     "\n",
-    "Starting 2 June 2025 and continuing through the year, IBM Quantum&reg; will begin a gradual rollout of new features to dynamic circuits that will enable them at the utility scale. See the [announcement](https://docs.quantum.ibm.com/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) for more details.\n",
+    "Starting 2 June 2025 and continuing through the year, IBM Quantum&reg; will begin a gradual rollout of new features to dynamic circuits that will enable them at the utility scale. See the [announcement](/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) for more details.\n",
     "\n",
     "To accelerate the rollout, the following have been deprecated:\n",
     "\n",
