--- a/docs/guides/transpile-rest-api.mdx
+++ b/docs/guides/transpile-rest-api.mdx
@@ -18,7 +18,7 @@ You have two transpilation options:
 * Use the [Qiskit Transpiler Service Python client](/docs/api/qiskit-ibm-transpiler) or [Qiskit Transpiler Service REST API](/docs/api/qiskit-transpiler-service-rest).
 
 <Admonition type="note">
-    [Transpilation is necessary](https://docs.quantum.ibm.com/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM&reg; QPUs.
+    [Transpilation is necessary](/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM&reg; QPUs.
 </Admonition>
 
 The steps in this topic describe how to transpile a given QASM circuit and obtain results using the Cloud Transpiler REST API, and include suggestions on how to submit the transpiled quantum circuit to IBM compute resources.  For an example that uses parameterized input, see [Sampler primitive with REST API and parameterized circuits.](/docs/guides/primitives-rest-api#start-sampler-parms)
