--- a/learning/courses/quantum-business-foundations/exam.mdx
+++ b/learning/courses/quantum-business-foundations/exam.mdx
@@ -9,11 +9,10 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 ## Test your knowledge
 
-After completing the reading and activities in this course, click the button below to navigate to IBM Training, where you can take the quantum business foundations badging exam.
+After completing the reading and activities in this course, click the button below to navigate to IBM Training, where you can take the badging exam for Quantum business foundations.
 
 The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you use to register with IBM Training.
 
 Make sure you're ready to take the exam. If you don't receive a passing score in two attempts, the exam becomes temporarily locked.
 
 <LaunchExamButton href="https://www.ibm.com/training/course/quantum-business-foundations-badge-quiz-DL46104G" />
-
