--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -41,3 +41,15 @@ To make the most out of this course, we recommend familiarity with basic linear 
 - John K. Hunter. [An Introduction to Real Analysis: Chapter 1](https://www.math.ucdavis.edu/~hunter/intro_analysis_pdf/ch1.pdf)
 
    The first chapter of these lecture notes includes a more formal and detailed introduction to sets and functions.
+
+## Exam
+
+To earn your Basics of quantum information badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+## Awarded Badge
+
+### Credly
+
+IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+!["Hero image"](/learning/images/courses/basics-of-quantum-information/badge.svg)
