Added last videos, minor toc change

--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "You will hear about a few example optimizers and how they perform in the presence and absence of noise.\n",
     "\n",
-    "<iframe width=\"690\" height=\"390\" src=\"https://video.ibm.com/embed/recorded/132414916\"></iframe>\n",
+    "<IBMVideo id=\"132414916\" title=\"Victoria Lipinska explains the use of classical optimizers in VQE. In particular, she covers caveats like handling noise and so-called barren plateaus.\"/>\n",
     "\n",
     "### References\n",
     "\n",
