--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Dr. Victoria Lipinska walks us through Hamiltonians and how to map them for use in quantum computing.\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/132414924\" width=\"690\" height=\"390\"></iframe>\n",
+    "<IBMVideo id=\"132414924\" title=\"Victoria Lipinska reminds us what a Hamiltonian is and how it is used in VQE. In particular, she describes the need for mapping a fermionic Hamiltonian that governs indistinguishable fermions to a qubit Hamiltonian.\"/>\n",
     "\n",
     "### References\n",
     "\n",
