--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -32,11 +32,14 @@
    "source": [
     "-------\n",
     "\n",
-    "\n",
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "\n",
-    "Video title=\"Quantum Spin Isn’t What You Think - See Why with Stern-Gerlach\""
+    "<ImageLink\n",
+    "  title=\"Quantum Spin Isn’t What You Think - See Why with Stern-Gerlach\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://www.youtube.com/watch?v=pcGIBacW-q0&list=PLOFEBzvs-Vvrs2fuvsuT039ariYPsua3d&index=7\"\n",
+    "  src=\"/learning/images/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit/YT-thumb.avif\"\n",
+    "/>"
    ]
   },
   {
