--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -32,11 +32,14 @@
    "source": [
     "-------\n",
     "\n",
-    "\n",
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "\n",
-    "Video title=\"Bell’s Inequality and the Power of Quantum Entanglement\""
+    "<ImageLink\n",
+    "  title=\"Bell’s Inequality and the Power of Quantum Entanglement\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://www.youtube.com/watch?v=pS69lqCMdy8&list=PLOFEBzvs-Vvrs2fuvsuT039ariYPsua3d&index=4\"\n",
+    "  src=\"/learning/images/modules/quantum-mechanics/bells-inequality-with-qiskit/YT-thumb.avif\"\n",
+    "/>"
    ]
   },
   {
