--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -32,11 +32,14 @@
    "source": [
     "-------\n",
     "\n",
-    "\n",
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "\n",
-    "Video title=\"Quantum Uncertainty: Why We Can’t Know Everything\""
+    "<ImageLink\n",
+    "  title=\"Quantum Uncertainty: Why We Can’t Know Everything\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://www.youtube.com/watch?v=3h3pwrECbb8&list=PLOFEBzvs-Vvrs2fuvsuT039ariYPsua3d&index=5\"\n",
+    "  src=\"/learning/images/modules/quantum-mechanics/exploring-uncertainty-with-qiskit/YT-thumb.avif\"\n",
+    "/>"
    ]
   },
   {
