Add allowlist urls

--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -52,6 +52,15 @@ Follow the steps in the appropriate topic, depending on the ID provider you chos
 * [Use an ID provider other than IBM Cloud for users that do not have IBM Cloud accounts](/docs/guides/manage-appid#id-provider)
 * [Invite users and manage their access](/docs/guides/invite-and-manage-users)
 
+<span id="firewall"></span>
+## 6. Configure your firewall
+
+To configure youre firewall to enable access to the IBM Quantum API endpoints, add the following URLs to your allowlist:
+
+- IBM Quantum APIs: https://quantum.cloud.ibm.com and https://eu-de.quantum.cloud.ibm.com
+- IBM Cloud platform APIs: https://cloud.ibm.com and https://*.cloud.ibm.com
+- IBM Cloud object storage for jobs: https://*.cloud-object-storage.appdomain.cloud
+
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
