--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -55,7 +55,7 @@ Follow the steps in the appropriate topic, depending on the ID provider you chos
 <span id="firewall"></span>
 ## 6. Configure your firewall
 
-To configure youre firewall to enable access to the IBM Quantum API endpoints, add the following URLs to your allowlist:
+To configure your firewall to enable access to the IBM Quantum API endpoints, add the following URLs to your allowlist:
 
 - IBM Quantum APIs: https://quantum.cloud.ibm.com and https://eu-de.quantum.cloud.ibm.com
 - IBM Cloud platform APIs: https://cloud.ibm.com and https://*.cloud.ibm.com
