--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -57,9 +57,22 @@ Follow the steps in the appropriate topic, depending on the ID provider you chos
 
 To configure your firewall to enable access to the IBM Quantum API endpoints, add the following URLs to your allowlist:
 
-- IBM Quantum APIs: https://quantum.cloud.ibm.com and https://eu-de.quantum.cloud.ibm.com
-- IBM Cloud platform APIs: https://cloud.ibm.com and https://*.cloud.ibm.com
-- IBM Cloud object storage for jobs: https://*.cloud-object-storage.appdomain.cloud
+- IBM Quantum APIs:
+    https://quantum.cloud.ibm.com
+    https://eu-de.quantum.cloud.ibm.com
+- IBM Cloud platform APIs:
+    https://cloud.ibm.com
+    https://*.cloud.ibm.com
+- IBM Cloud object storage for jobs:
+    https://*.cloud-object-storage.appdomain.cloud
+- Qiskit Functions:
+    qiskit-serverless.quantum.ibm.com
+    api.quantum.ibm.com
+    auth.quantum.ibm.com
+    runtime-us-east.quantum.ibm.com
+    api-qcon.quantum.ibm.com
+    iam.cloud.ibm.com
+    resource-controller.cloud.ibm.com
 
 ## Next steps
 
