missing trademarks (in QBF too) and titles

--- a/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
@@ -14,7 +14,7 @@
    "id": "8f00d4c1-6c59-43ab-a731-b1232406551d",
    "metadata": {},
    "source": [
-    "## Introduction\n",
+    "# Asymmetric key cryptography\n",
     "\n",
     "In this lesson we will look at asymmetric key cryptography which forms the basis of many secure network interactions today.\n",
     "\n",
@@ -22,7 +22,7 @@
     " - What asymmetric key cryptography is\n",
     " - Usage of asymmetric key cryptography, including key exchange and digital signatures\n",
     " - Security of asymmetric key cryptography in general\n",
-    " - Further details on RSA, DSA & Elliptic Curves algorithms and security\n",
+    " - Further details on RSA, DSA and Elliptic Curves algorithms and security\n",
     " - Some Python code examples showing how the algorithms work in practice\n",
     " - Threats to these algorithms from both classical and quantum computers"
    ]
@@ -990,7 +990,7 @@
    "metadata": {},
    "source": [
     "#### Digital signatures with RSA\n",
-    "We will now extend the above confidential communication scenario with Alice and Bob to one that also includes validation with the help of a [digital signature][49]\n",
+    "We will now extend the above confidential communication scenario with Alice and Bob to one that also includes validation with the help of a [digital signature][49].\n",
     "\n",
     "As before, Alice will confidentially send a message encapsulating a symmetric key to Bob, but she will also digitally sign the message so that Bob, upon receiving the message, can verify that it was Alice who originated it and that the contents of the message were not tampered with during transmission.\n",
     "\n",
