--- a/learning/courses/quantum-safe-cryptography/whats-next.mdx
+++ b/learning/courses/quantum-safe-cryptography/whats-next.mdx
@@ -5,9 +5,9 @@ description: This lesson will look at the next steps you can take to modernize y
 
 {/* cspell:ignore CBOMs, CBOM, Remediator */}
 
-## What's next?
+# What's next?
 
-Now that you’ve learned the fundamentals of quantum-safe cryptography, explore the technologies IBM Quantum offers for modernizing your cryptographic landscape and building quantum cyber resilience. [IBM Quantum Safe](https://www.ibm.com/quantum/quantum-safe) is a comprehensive set of tools, capabilities, and approaches combined with deep expertise to help you plan and execute your organization’s migration to quantum-safe cryptography. Discover, Observe, and Transform your cryptography with three core technical capabilities:
+Now that you’ve learned the fundamentals of quantum-safe cryptography, explore the technologies IBM Quantum&reg; offers for modernizing your cryptographic landscape and building quantum cyber resilience. [IBM Quantum Safe&trade;](https://www.ibm.com/quantum/quantum-safe) is a comprehensive set of tools, capabilities, and approaches combined with deep expertise to help you plan and execute your organization’s migration to quantum-safe cryptography. Discover, observe, and transform your cryptography with three core technical capabilities:
 
 **1. IBM Quantum Safe Explorer**
 
@@ -28,9 +28,7 @@ With its policy-based enrichment, Advisor equips you to evaluate your cryptograp
 
 IBM Quantum Safe Remediator enables you to apply best practices for quantum-safe remediation patterns focused on VPN communication, TLS communication, and cluster access communication. Build crypto-agility by exploring solutions for transforming your cryptography without disrupting business operations.
 
-Read the technology guide: https://www.ibm.com/quantum/assets/quantum-safe/IBM_Quantum-Safe-Technology-Brochure.pdf.
-
-Learn more at https://www.ibm.com/quantum/quantum-safe.
+Read the [technology guide](https://www.ibm.com/quantum/assets/quantum-safe/IBM_Quantum-Safe-Technology-Brochure.pdf), and learn more on the [IBM Quantum Safe site.](https://www.ibm.com/quantum/quantum-safe)
 
 [CBOM]: #definition-tooltip "A schema extension of the CycloneDX Software Bill of Materials (SBOM) standard that provides an object model for describing cryptographic artifacts and their dependencies."
 
