--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
@@ -217,10 +217,10 @@ Progress your own work in collaboration with peers and IBM Quantum experts. Here
 
 Bookmark these pages to ensure you have access to IBM Quantum’s industry-leading resources:
 
-* [IBM Quantum Computing](https://quantum.ibm.com/): Login with your IBMid and navigate with the application switcher in the upper right hand corner to explore the suite of applications to support your quantum needs:
-  * [IBM Quantum Platform](https://quantum.ibm.com/) to access IBM quantum computer on the cloud
-  * [IBM Quantum Learning](https://learning.quantum.ibm.com/) to take a course, follow a learning path, browse tutorials, and start experimenting with Composer
-  * [IBM Quantum Documentation](https://quantum.cloud.ibm.com/) to ensure you get the most of the tools and services that IBM has to offer
+* [IBM Quantum Computing](https://quantum.cloud.ibm.com/): Login with your IBMid and navigate with the application switcher in the upper right hand corner to explore the suite of applications to support your quantum needs:
+  * [IBM Quantum Platform](https://quantum.cloud.ibm.com/) to access IBM quantum computer on the cloud
+  * [IBM Quantum Learning](/learning) to take a course, follow a learning path, browse tutorials, and start experimenting with Composer
+  * [IBM Quantum Documentation](/docs) to ensure you get the most of the tools and services that IBM has to offer
 * [IBM Research Blog](https://research.ibm.com/blog): Stay up to date with the latest news, research, and events from IBM Research
 * [Qiskit YouTube Channel](https://www.youtube.com/qiskit): Engaging lectures, tips & tricks, tutorials, community updates, and access to exclusive Qiskit content. [Subscribe here](http://ibm.biz/q-subscribe) for weekly Qiskit videos
 
