Updated all badging images

--- a/learning/courses/quantum-business-foundations/index.mdx
+++ b/learning/courses/quantum-business-foundations/index.mdx
@@ -11,7 +11,7 @@ Designed by IBM Quantum experts, this course covers the essentials of quantum co
 
 ## Exam
 
-To earn your Quantum Business Foundations badge, take the exam at IBM Training linked below. This exam is intended to be taken after reading the lessons in this course. Once you have passed the exam, you will be notified by Credly that you have earned a badge.
+To earn your Quantum business foundations badge, take the exam at IBM Training linked below. This exam is intended to be taken after reading the lessons in this course. Once you have passed the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/quantum-business-foundations/exam)
 
@@ -20,3 +20,5 @@ To earn your Quantum Business Foundations badge, take the exam at IBM Training l
 ### Credly
 
 IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+!["Hero image"](/learning/images/courses/quantum-business-foundations/badge.avif)
