--- a/learning/courses/quantum-diagonalization-algorithms/index.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/index.mdx
@@ -17,3 +17,15 @@ We recommend that learners complete the following prerequisites prior to this co
 
 - Set up your local environment by following along with the [Get started](https://docs.quantum.ibm.com/guides) guide in our documentation page.
 - For deeper understanding of quantum information, try [Basics of Quantum Information](https://quantum.cloud.ibm.com/learning/course/basics-of-quantum-information) with John Watrous.
+
+## Exam
+
+To earn your Quantum diagonalization algorithms badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+## Awarded Badge
+
+### Credly
+
+IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+!["Hero image"](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
