--- a/learning/courses/quantum-machine-learning/index.mdx
+++ b/learning/courses/quantum-machine-learning/index.mdx
@@ -8,3 +8,15 @@ description: An introduction to quantum machine learning (QML), data encoding, k
 !["Hero image"](/learning/images/courses/quantum-machine-learning/hero.svg)
 
 This course explores how quantum computing can play an exciting role in machine learning. The course will offer some review of classical machine learning approaches, but will also assume some familiarity with these methods. The primary focus will be how quantum computing can fit into existing machine learning workflows. Topics include data encoding, quantum kernels, and variational quantum circuits.
+
+## Exam
+
+To earn your Quantum machine learning badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+## Awarded Badge
+
+### Credly
+
+IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+!["Hero image"](/learning/images/courses/quantum-machine-learning/badge.avif)
