--- a/learning/courses/variational-algorithm-design/index.mdx
+++ b/learning/courses/variational-algorithm-design/index.mdx
@@ -8,3 +8,15 @@ description: An exploration of variational quantum algorithm design covers appli
 !["Hero image"](/learning/images/courses/variational-algorithm-design/hero.svg)
 
 This course is intended for individuals who have some experience with quantum computing and want to learn how to write variational algorithms using Qiskit Runtime primitives. It is also suitable for quantum computing professionals who want to expand their knowledge and skills in the field of variational algorithms.
+
+## Exam
+
+To earn your Variational algorithm design badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+## Awarded Badge
+
+### Credly
+
+IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+!["Hero image"](/learning/images/courses/variational-algorithm-design/badge.avif)
