--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -19,3 +19,15 @@ It begins with quantum query algorithms, which offer simple proof-of-concept dem
 including integer factorization and unstructured search.
 
 This course is intended for students, professionals, and hobbyists in fields such as computer science, physics, engineering, and mathematics who are eager to gain knowledge on the theoretical foundations of quantum information and computation.
+
+## Exam
+
+To earn your Fundamentals of quantum algorithms badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+## Awarded Badge
+
+### Credly
+
+IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+!["Hero image"](/learning/images/courses/fundamentals-of-quantum-algorithms/badge.avif)
