Removed external links to notebooks

--- a/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
@@ -35,11 +35,10 @@
     "* Classical optimizer\n",
     "\n",
     "Now we just have to bring them together in the Qiskit Patterns framework.\n",
-    "It is recommended that you run this code in your own local Python environment. The code is provided in this [notebook](https://learning-api.quantum.ibm.com/assets/baf078ed-bd10-489e-9457-ad77b8509810.ipynb).\n",
     "\n",
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, please see the [lesson on Hamiltonians](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out. For extensions to more complex molecules, see the [Example Molecule notebook](https://learning-api.quantum.ibm.com/assets/4075feeb-538c-4127-8fef-57d109bf5ae3.ipynb) introduced in the Hamiltonian lesson."
+    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, please see the [lesson on Hamiltonians](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out."
    ]
   },
   {
